qt-cb-sys/src/button.rs

/* automatically generated by rust-bindgen 0.64.0 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct QAbstractButton {
    _unused: [u8; 0],
}
extern "C" {
    pub fn QAbstractButton_onClicked(
        btn: *mut QAbstractButton,
        arg1: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut QAbstractButton,
                arg2: ::std::os::raw::c_int,
                arg3: *mut ::std::os::raw::c_void,
            ),
        >,
        data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn QAbstractButton_onPressed(
        btn: *mut QAbstractButton,
        arg1: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut QAbstractButton, arg2: *mut ::std::os::raw::c_void),
        >,
        data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn QAbstractButton_onToggled(
        btn: *mut QAbstractButton,
        arg1: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut QAbstractButton,
                arg2: ::std::os::raw::c_int,
                arg3: *mut ::std::os::raw::c_void,
            ),
        >,
        data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn QAbstractButton_onReleased(
        btn: *mut QAbstractButton,
        arg1: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut QAbstractButton, arg2: *mut ::std::os::raw::c_void),
        >,
        data: *mut ::std::os::raw::c_void,
    );
}
